2005-10-28  Ankit Jain  <jankit@novell.com>

	* gen-prop.cs: New test case (for r52316).